--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,5 @@ issue-tracker = "https://github.com/kmorhun/ballroomify/issues"
 doc = [
     "sphinx~=4.2.0",
     "myst-parser",
-    "sphinx-rtd-theme"
+    "sphinx-rtd-theme",
 ]
